# LFP_A_1S2026

./: README.md
Practica 1/: curso.h  estudiante.h  main.cpp  nota.h  sistema.cpp  sistema.h
Practica 1/data/: cursos.lfp  estudiantes.lfp  notas.lfp
Practica 1/reportes/: reporte_analisis_carrera.html  reporte_estadisticas_curso.html  reporte_indice_reprobacion.html  reporte_rendimiento_estudiante.html  reporte_top10.html
Proyecto 2/Codigo/: CMakeLists.txt  Driagrama.dot  compilar.bat  compilar_con_qmake.ps1  reporte_arbol.dot  reporte_kanban.html  reporte_responsable.html  reporte_tokens.html  resultados.json  taskparser_server.py  test_con_dolar.task  test_error_lexico_caracter.task  test_server.py  visualizar_arbol.ps1
Proyecto 2/Codigo/build_qt/: Makefile  Makefile.Debug  Makefile.Release  TaskScriptQt.pro
Proyecto 2/Codigo/build_qt/debug/: object_script.TaskScriptQt.Debug
Proyecto 2/Codigo/build_qt/release/: moc_MainWindow.cpp  object_script.TaskScriptQt.Release
Proyecto 2/Codigo/examples/: Archivo_Correcto.task  ejemplo_completo.task  ejemplo_con_errores.task  ejemplo_simple.task  ejemplo_valido.task  minimo.task  test_simple.task
Proyecto 2/Codigo/src/: main.cpp  main_server.cpp
Proyecto 2/Codigo/src/Error/: Error.cpp  Error.h  ErrorManager.cpp  ErrorManager.h
Proyecto 2/Codigo/src/Lexer/: LexicalAnalyzer.cpp  LexicalAnalyzer.h  Token.cpp  Token.h
Proyecto 2/Codigo/src/Parser/: ASTNode.cpp  ASTNode.h  SyntaxAnalyzer.cpp  SyntaxAnalyzer.h
Proyecto 2/Codigo/src/QtGUI/: MainWindow.cpp  MainWindow.h  main.cpp
Proyecto 2/Codigo/src/Reports/: ReportGenerator.cpp  ReportGenerator.h
Proyecto 2/Codigo/tests/: test10_error_prioridad_invalida.task  test4_error_lexico_cadena.task  test5_error_sintactico_falta_puntos.task  test6_error_sintactico_llave_faltante.task  test7_error_sintactico_puntoycoma_faltante.task  test8_errores_multiples.task  test_valido_completo.task  test_valido_minimo.task
Proyecto 2/Codigo/web/: index.html  reporte_arbol.dot  reporte_kanban.html  reporte_responsable.html  reporte_tokens.html  script.js  style.css
Proyecto1/: README.md
Proyecto1/Archivos.med/: test1.med  test2.med  test3.med  test4.med  test5.med  test6.med  test7.med  test9.med
Proyecto1/Codigo/: .gitignore  CMakeLists.txt  Programa.cpp  build_qt.bat  compile.bat  hospital.dot  limpiar.bat  reporte1_pacientes.html  reporte2_medicos.html  reporte3_citas.html  reporte4_estadisticas.html
Proyecto1/Codigo/include/core/: ErrorManager.h  LexicalAnalyzer.h  Token.h
Proyecto1/Codigo/include/gui/: MainWindow.h
Proyecto1/Codigo/include/reports/: ReportGenerator.h
Proyecto1/Codigo/src/: main.cpp  main_gui.cpp
Proyecto1/Codigo/src/core/: ErrorManager.cpp  LexicalAnalyzer.cpp  Token.cpp
Proyecto1/Codigo/src/gui/: MainWindow.cpp
Proyecto1/Codigo/src/reports/: ReportGenerator.cpp
Proyecto1/Exemple/: Exemple1.med  Exemple2.med
Tarea 1/: tarea1.cpp
